[tool.poetry]
name = "notepad-online"
version = "0.1.0"
description = ""
authors = ["Ilia Kaziamov <kaziamov@outlook.com>"]
readme = "README.md"
packages = [{include = "notepad_online"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
psycopg2-binary = "^2.9.7"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
